--- a/ggkt-vod/vod-service/src/main/resources/application.yml
+++ b/ggkt-vod/vod-service/src/main/resources/application.yml
@@ -3,6 +3,7 @@ server:
 spring:
   profiles:
     include: [common]
+    active: dev
   datasource:
     url: jdbc:mysql://bj-cdb-c504ejce.sql.tencentcdb.com:60161/glkt_vod?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
