--- a/ggkt-common/pom.xml
+++ b/ggkt-common/pom.xml
@@ -82,6 +82,12 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!--druid-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+
         <!--actuator-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
