--- a/ggkt-vod/vod-api/pom.xml
+++ b/ggkt-vod/vod-api/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>ggkt-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
