--- a/ggkt-common/pom.xml
+++ b/ggkt-common/pom.xml
@@ -124,5 +124,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>20030211.134440</version>
+        </dependency>
     </dependencies>
 </project>
