--- a/ggkt-common/src/main/resources/application-common.yml
+++ b/ggkt-common/src/main/resources/application-common.yml
@@ -8,7 +8,7 @@ mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
-  type-aliases-package: cn.wenhe9.ggkt.*.domain
+  type-aliases-package: cn.wenhe9.ggkt.*.entity
   mapper-locations: classpath:mapper/*.xml
   global-config:
     db-config:
