feat(activity, user): 新增营销模块和用户管理模块，引入feign实现远程调用

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>ggkt-oss</module>
         <module>ggkt-gateway</module>
         <module>ggkt-order</module>
+        <module>ggkt-activity</module>
+        <module>ggkt-user</module>
     </modules>
     <name>ggkt_parent</name>
     <description>ggkt_parent</description>
