--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>ggkt-order</module>
         <module>ggkt-activity</module>
         <module>ggkt-user</module>
+        <module>ggkt-wechat</module>
     </modules>
     <name>ggkt_parent</name>
     <description>ggkt_parent</description>
