--- a/ggkt-common/pom.xml
+++ b/ggkt-common/pom.xml
@@ -130,5 +130,15 @@
             <artifactId>commons-beanutils</artifactId>
             <version>20030211.134440</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
     </dependencies>
 </project>
