--- a/ggkt-vod/vod-service/src/main/resources/bootstrap.yml
+++ b/ggkt-vod/vod-service/src/main/resources/bootstrap.yml
@@ -2,7 +2,9 @@ spring:
   application:
     name: ggkt-vod
   profiles:
-    active: dev
+    active:
+      - dev
+      - secret
   cloud:
     nacos:
       config:
