--- a/ggkt-order/order-service/src/main/resources/bootstrap.yml
+++ b/ggkt-order/order-service/src/main/resources/bootstrap.yml
@@ -5,3 +5,10 @@ spring:
     active:
       - dev
       - secret
+  cloud:
+    nacos:
+      config:
+        extension-configs:
+          - data-id: ggkt-wxpay.yml
+            group: ggkt-common
+            refresh: true
