feat(live): 新增直播模块，完成直播课程管理接口，使用建造者模式、多线程、sql的date_format函数优化代码

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>ggkt-activity</module>
         <module>ggkt-user</module>
         <module>ggkt-wechat</module>
+        <module>ggkt-live</module>
     </modules>
     <name>ggkt_parent</name>
     <description>ggkt_parent</description>
