--- a/ggkt-live/live-service/pom.xml
+++ b/ggkt-live/live-service/pom.xml
@@ -25,6 +25,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.wenhe9</groupId>
+            <artifactId>user-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <!-- 直播  -->
         <dependency>
             <groupId>commons-httpclient</groupId>
